--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
           category: "Wohnsitz ummelden",
           url: "/wohnsitz-ummelden-in-zürich.html",
         },
+         {
+          title: "EricSaloReviews.click: Your Trusted Hub for Honest Digital Tool Reviews",
+          description:
+            "Discover Clarity and Confidence with EricSaloReviews.click. In a digital world overflowing with options, EricSaloReviews.click stands out as a beacon of transparency and empowerment. Curated by multidisciplinary founder Eric Salo, the site delivers honest digital tool reviews designed to help readers cut through the noise and make confident, informed decisions.",
+          date: "August 31, 2025",
+          category: "mind and business",
+          url: "/mind-and-business-insights.html",
+        },
       ];
 
       // Function to display blog posts
@@ -94,3 +102,4 @@
     </script>
   </body>
 </html>
+
