--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
           category: "mind and business",
           url: "/mind-and-business-insights.html",
         },
+        {
+          title:
+            "Bring Your Vision to Life: How to Edit Images with Nano Banana",
+          description:
+            "Edit images with Nano Banana to enhance, retouch, and transform your photos in seconds. Achieve professional-quality results with easy, fast, and user-friendly tools—no design skills needed.",
+          date: "Oct 02, 2025",
+          category: "AI",
+          url: "/edit-images-with-nano-banana.html",
+        },
       ];
 
       // Function to display blog posts
@@ -102,4 +111,5 @@
     </script>
   </body>
 </html>
+
 
