--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
           category: "AI",
           url: "/edit-images-with-nano-banana.html",
         },
+        {
+          title:
+            "Expressive Jockstraps That Speak Without Words",
+          description:
+            "Explore a wide range of silhouettes—from athletic cuts to provocative designs—crafted to empower your stride and sharpen your silhouette. These aren’t just underwear—they’re mood-driven fashion tools that amplify identity and celebrate the art of reveal.",
+          date: "Oct 22, 2025",
+          category: "AI",
+          url: "/physique-forward-fashion.html",
+        },
       ];
 
       // Function to display blog posts
@@ -111,5 +120,6 @@
     </script>
   </body>
 </html>
+
 
 
