--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
           category: "AI",
           url: "/physique-forward-fashion.html",
         },
+         {
+          title:
+            "Breathable Ease, Confident Fit: Trunks for Everyday Living",
+          description:
+            "Over 1,700 styles. 33+ bold brands. One unapologetic destination. This collection blends relaxed ease with physique-focused design—boxers and trunks that move with you, support you, and reflect your mood. From laid-back silhouettes to sculpted fits, each piece is crafted for breathable comfort and expressive style.",
+          date: "Oct 29, 2025",
+          category: "lifestyle",
+          url: "/body-positive-boxer-briefs-that-celebrate-identity.html",
+        },
       ];
 
       // Function to display blog posts
@@ -120,6 +129,7 @@
     </script>
   </body>
 </html>
+
 
 
 
