--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
           category: "lifestyle",
           url: "/body-positive-boxer-briefs-that-celebrate-identity.html",
         },
+        {
+          title:
+            "Backless Cuts and Athletic Edge: Swimwear That Moves With You",
+          description:
+            "This swimwear collection features backless cuts, pouch-forward designs, and sleek jockstrap silhouettes built for visibility and movement. From recycled fabrics and quick-dry blends to enhancement-ready fits and mood-driven colorways, each piece is crafted to highlight the body with minimal coverage and maximum flair.",
+          date: "Nov 01, 2025",
+          category: "lifestyle",
+          url: "/pouch-forward-swim-jockstraps.html",
+        },
       ];
 
       // Function to display blog posts
@@ -129,6 +138,7 @@
     </script>
   </body>
 </html>
+
 
 
 
