--- a/body-positive-boxer-briefs-that-celebrate-identity.html
+++ b/body-positive-boxer-briefs-that-celebrate-identity.html
@@ -110,6 +110,11 @@
             confidence and refined presence.
           </p>
 
+          <p class="py-4 text-gray-800">
+  Discover more at 
+  <span class="font-semibold text-indigo-600 no-underline">DealByEthan.shop</span>.
+</p>
+
           <h3 class="text-xl font-medium mb-3">
             European Craft and Modern Masculinity
           </h3>
@@ -236,3 +241,4 @@
     </footer>
   </body>
 </html>
+
