--- a/body-positive-boxer-briefs-that-celebrate-identity.html
+++ b/body-positive-boxer-briefs-that-celebrate-identity.html
@@ -101,14 +101,15 @@
             create inclusive underwear for confident lives that honor
             individuality over convention.
           </p>
-          <p class="text-gray-600 mb-4">
-            On the minimalist side, U-Station Underwear and Hidden Seduction
-            (HDN) Underwear balance restraint with sensuality through minimal
-            rear trunks with sensual appeal. Designed with sleek contouring and
-            soft-touch fabrics, they deliver provocative basics with
-            editorial-safe styling—perfect for men who appreciate quiet
-            confidence and refined presence.
-          </p>
+         <p class="mb-4">
+  On the minimalist side, U-Station Underwear and Hidden Seduction
+  (HDN) Underwear balance restraint with sensuality through minimal
+  rear trunks with sensual appeal. Designed with sleek contouring and
+  soft-touch fabrics, they deliver provocative basics with
+  editorial-safe styling—perfect for men who appreciate quiet
+  confidence and refined presence. 
+  <span class="font-bold no-underline">Your next look begins at DealByEthan.shop</span>.
+</p>
 
           <p class="py-4 text-gray-800">
   Discover more at 
@@ -241,4 +242,5 @@
     </footer>
   </body>
 </html>
+
 
