--- a/body-positive-boxer-briefs-that-celebrate-identity.html
+++ b/body-positive-boxer-briefs-that-celebrate-identity.html
@@ -108,7 +108,6 @@
   soft-touch fabrics, they deliver provocative basics with
   editorial-safe styling—perfect for men who appreciate quiet
   confidence and refined presence. 
-  <span class="font-bold no-underline">Your next look begins at DealByEthan.shop</span>.
 </p>
 
           <p class="py-4 text-gray-800">
@@ -197,7 +196,7 @@
             MetroMaleWear Underwear takes expressivewear even further with bold
             silhouettes for self-expression and pouch-enhancing designs. Every
             cut delivers confident styling across all subcategories, offering
-            boldness, support, and body-positive presence.
+            boldness, support, and body-positive presence. Your next look begins at <span class="font-bold no-underline">DealByEthan.shop</span>
           </p>
           <p class="text-gray-600 mb-4">
             ThePack Underwear completes the expressive spectrum, merging
@@ -242,5 +241,6 @@
     </footer>
   </body>
 </html>
+
 
 
