--- a/pouch-forward-swim-jockstraps.html
+++ b/pouch-forward-swim-jockstraps.html
@@ -130,6 +130,12 @@
             days under the sun, where freedom of movement and style coexist
             effortlessly.
           </p>
+<p class="text-base text-white leading-relaxed">
+  <span class="font-semibold">Step into expressivewear</span> at 
+  <span class="font-bold">DealByEthan.shop</span>.
+</p>
+
+
 
           <h3 class="text-xl font-medium mb-3">
             Expressivewear for Active Confidence
@@ -203,7 +209,10 @@
             This is expressivewear as identity—unfiltered, confident, and
             designed for visual impact.
           </p>
-
+<p class="text-base text-white leading-relaxed">
+  <span class="font-semibold">Explore tailored silhouettes</span> at 
+  <span class="font-bold">DealByEthan.shop</span>.
+</p>
           <h3 class="text-xl font-medium mb-3">Why It Matters</h3>
           <p class="text-gray-600 mb-4">
             Fashion has always been a dialogue between comfort and courage.
@@ -244,3 +253,4 @@
     </footer>
   </body>
 </html>
+
