--- a/pouch-forward-swim-jockstraps.html
+++ b/pouch-forward-swim-jockstraps.html
@@ -130,7 +130,7 @@
             days under the sun, where freedom of movement and style coexist
             effortlessly.
           </p>
-<p class="text-base text-white leading-relaxed">
+<p class="text-base text-black leading-relaxed">
   <span class="font-semibold">Step into expressivewear</span> at 
   <span class="font-bold">DealByEthan.shop</span>.
 </p>
@@ -209,7 +209,7 @@
             This is expressivewear as identity—unfiltered, confident, and
             designed for visual impact.
           </p>
-<p class="text-base text-white leading-relaxed">
+<p class="text-base text-black leading-relaxed">
   <span class="font-semibold">Explore tailored silhouettes</span> at 
   <span class="font-bold">DealByEthan.shop</span>.
 </p>
@@ -253,4 +253,5 @@
     </footer>
   </body>
 </html>
+
 
