--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@
           category: "lifestyle",
           url: "/pouch-forward-swim-jockstraps.html",
         },
+        {
+          title:
+            "Calidum Boutique Suites: A Modern Coastal Hideaway in Dalmatia",
+          description:
+            "Calidum Boutique Suites is a collection of elegant beachfront apartments in a peaceful Dalmatian setting. Located in Bilice near Šibenik, the property features three uniquely styled suites — Citrus, Heritage and Gallery — each with a private terrace or balcony, fully equipped kitchen, modern decor and relaxing bay views.",
+          date: "Dec 02, 2025",
+          category: "lifestyle",
+          url: "/calidum-boutique-suites.html",
+        },
       ];
 
       // Function to display blog posts
@@ -138,6 +147,7 @@
     </script>
   </body>
 </html>
+
 
 
 
